--- a/latex/aplicaciones_edos.tex
+++ b/latex/aplicaciones_edos.tex
@@ -74,7 +74,7 @@
 
 	\begin{figure}
 		\centering
-		\includegraphics[height=7cm,keepaspectratio=true]{./edo/img020501.png}
+		\includegraphics[width=7cm,keepaspectratio=true]{./edo/img020501.png}
 		% img020501.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
 		\label{fig:020501}
 	\end{figure}
@@ -117,7 +117,7 @@
 
 	\begin{figure}
 		\centering
-		\includegraphics[height=5cm,keepaspectratio=true]{./edo/img020506.png}
+		\includegraphics[width=5cm,keepaspectratio=true]{./edo/img020506.png}
 		% img020506.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
 		\label{fig:020506}
 	\end{figure}
@@ -188,7 +188,7 @@
 
 	\begin{figure}
 		\centering
-		\includegraphics[height=5cm,keepaspectratio=true]{./edo/img020502.png}
+		\includegraphics[width=5cm,keepaspectratio=true]{./edo/img020502.png}
 		% img020502.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
 		\label{fig:020502}
 	\end{figure}
@@ -205,7 +205,7 @@
 
 	\begin{figure}
 		\centering
-		\includegraphics[height=5cm,keepaspectratio=true]{./edo/img020504.png}
+		\includegraphics[width=5cm,keepaspectratio=true]{./edo/img020504.png}
 		% img020504.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
 		\label{fig:020504}
 	\end{figure}
@@ -225,7 +225,7 @@
 
 	\begin{figure}
 		\centering
-		\includegraphics[height=5cm,keepaspectratio=true]{./edo/img020503.png}
+		\includegraphics[width=5cm,keepaspectratio=true]{./edo/img020503.png}
 		% img020502.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
 		\label{fig:020503}
 	\end{figure}
