--- a/latex/aplicaciones_segundo_orden.tex
+++ b/latex/aplicaciones_segundo_orden.tex
@@ -6,7 +6,7 @@
 \subsection{Resortes}
 \begin{figure}
 	\centering
-	\includegraphics[height=5cm,keepaspectratio=true]{./edo/img030601.png}
+	\includegraphics[width=5cm,keepaspectratio=true]{./edo/img030601.png}
 	img030601.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
 	\label{fig:030601}
 \end{figure}
@@ -51,7 +51,7 @@ donde $a,k$ son constantes positivas de proporcionalida; $F(t)$ es una fuerza ex
 
 
 \begin{figure}
-	\includegraphics[height=7cm,keepaspectratio=true]{./edo/circuitos_electricos.png}
+	\includegraphics[width=7cm,keepaspectratio=true]{./edo/circuitos_electricos.png}
 	\label{fig:circuitos}
 \end{figure}
 
