--- a/latex/diagonalizacion.tex
+++ b/latex/diagonalizacion.tex
@@ -134,7 +134,7 @@ base), es decir, si $A$ es diagonalizable.
 
 % \begin{figure}
 %  \centering
-%  \includegraphics[height=5cm,keepaspectratio=true]{./Sketch94203650.png}
+%  \includegraphics[width=5cm,keepaspectratio=true]{./Sketch94203650.png}
 %  % Sketch94203650.png: 720x1024 pixel, 72dpi, 25.40x36.12 cm, bb=0 0 720 1024
 %  \caption{Diagonalización}
 %  \label{fig:cd}
