--- a/latex/exponencial_matrix.tex
+++ b/latex/exponencial_matrix.tex
@@ -483,7 +483,7 @@ botón derecho, y seleccione la opción copiar. }
 
 % \begin{figure}
 %  \centering
-%  \includegraphics[height=5cm,viewport=0 0 1024 576,keepaspectratio=true]{./pantalla.png}
+%  \includegraphics[width=5cm,viewport=0 0 1024 576,keepaspectratio=true]{./pantalla.png}
 %  % pantalla.png: 1366x768 pixel, 96dpi, 36.14x20.32 cm, bb=0 0 1024 576
 %  \caption{WxMaxima}
 %  \label{fig:1}
