--- a/latex/fundamentos_ecuaciones_diferenciales.tex
+++ b/latex/fundamentos_ecuaciones_diferenciales.tex
@@ -533,7 +533,7 @@ si es que existe, puede encontrarse resolviendo simultaneamente las ecuaciones
 {Solución: Inciso (b)}
 \begin{figure}
 	\centering
-	\includegraphics[height=.6\textheight,keepaspectratio=true]{./edo/solved_problem_02-08.png}
+	\includegraphics[width=\textwidth,keepaspectratio=true]{./edo/solved_problem_02-08.png}
 	% solved_problem_02-08.png: 630x470 px, 100dpi, 16.00x11.94 cm, bb=0 0 454 338
 	\caption{Familia uniparamétrica $y=x^3+c$}
 	\label{fig:solved_problem_02-08}
