--- a/latex/problemas-primer-orden.tex
+++ b/latex/problemas-primer-orden.tex
@@ -108,7 +108,7 @@
 
 \begin{figure}
 	\centering
-	\includegraphics[height=5cm,keepaspectratio=true]{./edo/img020505.png}
+	\includegraphics[width=5cm,keepaspectratio=true]{./edo/img020505.png}
 	% img020504.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
 	\label{fig:020505}
 \end{figure}
