--- a/latex/transformada_funciones_discontinuas.tex
+++ b/latex/transformada_funciones_discontinuas.tex
@@ -68,7 +68,7 @@
 
 	\begin{figure}
 		\centering
-		\includegraphics[height=5cm,keepaspectratio=true]{./edo/img0402.png}
+		\includegraphics[width=5cm,keepaspectratio=true]{./edo/img0402.png}
 		% img0402.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
 		\caption{Función Escalón $$u(x-c)$$}
 		\label{fig:0402}
@@ -101,7 +101,7 @@
 
 	\begin{figure}
 		\centering
-		\includegraphics[height=3cm,keepaspectratio=true]{./edo/img0403.png}
+		\includegraphics[width=3cm,keepaspectratio=true]{./edo/img0403.png}
 		% img0403.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
 		\label{fig:0403}
 	\end{figure}
