--- a/latex/transformada_laplace.tex
+++ b/latex/transformada_laplace.tex
@@ -72,7 +72,7 @@ $$
 
  \begin{figure}
  \centering
- \includegraphics[height=5cm,keepaspectratio=true]{./edo/img0401.png}
+ \includegraphics[width=5cm,keepaspectratio=true]{./edo/img0401.png}
  % img0401.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
  \label{fig:0401}
 \end{figure}
